Fix posts-collapse

--- a/source/css/_common/components/post/post-collapse.styl
+++ b/source/css/_common/components/post/post-collapse.styl
@@ -53,13 +53,10 @@
     }
   }
 
-  .post { margin: 30px 0; }
-
   .post-header {
     position: relative;
     the-transition();
     transition-property: border;
-    border-bottom: 1px dashed $grey-light;
 
     &::before {
       content: " ";
